# Triggr

./: README  README.md  updpak.sh
triggr/: DESCRIPTION  INSTALL  NAMESPACE  ax_pthread.m4  configure.ac
triggr/R/: rawpack.R  triggr.R
triggr/man/: endConnection.Rd  packing.Rd  serve.Rd  stopServer.Rd  triggr-package.Rd
triggr/src/: Connection.c  InBuffer.c  Makevars.in  OutBuffer.c  Trigger.c  WorkBuffer.c  code.c  code2.c  defs.h  libev.h.in  rawpack.c
